// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill renders correctly for inactive 1`] = `
<Pill>
  <button
    className="pill  "
    type="button"
  />
</Pill>
`;

exports[`Pill renders correctly for primary active 1`] = `
<Pill
  active={true}
  type="primary"
>
  <button
    className="pill  active"
    type="button"
  />
</Pill>
`;

exports[`Pill renders correctly for secondary active 1`] = `
<Pill
  active={true}
  type="secondary"
>
  <button
    className="pill secondary active"
    type="button"
  />
</Pill>
`;
